[gd_scene load_steps=16 format=3 uid="uid://cjiqgr0g1hxqn"]

[ext_resource type="Script" path="res://scripts/components/SoundManager.gd" id="1_ml4oo"]
[ext_resource type="AudioStream" uid="uid://3l8sas3qqxsf" path="res://sounds/heaven song better loop.ogg" id="3_ojewk"]
[ext_resource type="AudioStream" uid="uid://c5mrt3o8dm37o" path="res://sounds/spooky appear.wav" id="4_1imy8"]
[ext_resource type="AudioStream" uid="uid://c2b0vixnfa58r" path="res://sounds/hell song.wav" id="4_o0ust"]
[ext_resource type="AudioStream" uid="uid://cufdvsk6pjltn" path="res://sounds/select.wav" id="6_pqu0v"]
[ext_resource type="AudioStream" uid="uid://uo0l2ichm5y" path="res://sounds/important_select.wav" id="6_s7b2f"]
[ext_resource type="AudioStream" uid="uid://h0ifdujji4ks" path="res://sounds/hover.wav" id="8_1ql0m"]
[ext_resource type="AudioStream" uid="uid://b5pq3dcruvcpf" path="res://sounds/place upgrade.wav" id="9_yefo8"]
[ext_resource type="AudioStream" uid="uid://3e8rfypr6jgx" path="res://sounds/spooky.ogg" id="10_r6el4"]
[ext_resource type="AudioStream" uid="uid://d3t4v8j5d11" path="res://sounds/stone landing.wav" id="11_fexwx"]
[ext_resource type="AudioStream" uid="uid://oo0ppxv30n67" path="res://sounds/Vampire Survivors Soundtrack - Unholy Invocation.ogg" id="11_tigl0"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4iujt"]
random_pitch = 1.03
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("6_pqu0v")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xki68"]
random_pitch = 1.03
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("8_1ql0m")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qcg3o"]
random_pitch = 1.03
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("9_yefo8")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hedpq"]
random_pitch = 1.03
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("11_fexwx")

[node name="SoundManager" type="Node"]
process_mode = 3
script = ExtResource("1_ml4oo")

[node name="heaven_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ojewk")
volume_db = -6.0
bus = &"Music"

[node name="hell_song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o0ust")
bus = &"Music"

[node name="merchant_dialogue" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1imy8")
bus = &"SFX"

[node name="select" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_4iujt")
max_polyphony = 5
bus = &"SFX"

[node name="important_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_s7b2f")
bus = &"SFX"

[node name="button_hover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_xki68")
max_polyphony = 20
bus = &"SFX"

[node name="place_upgrade" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qcg3o")
max_polyphony = 3
bus = &"SFX"

[node name="main_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_r6el4")
bus = &"Music"

[node name="boss_song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tigl0")
bus = &"Music"

[node name="LandingSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hedpq")
max_polyphony = 10
bus = &"SFX"
